1999-10-07  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* Makefile.in (dist): Fixed for srcdir != objdir.

1999-10-07  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (AC_CHECK_HEADER_DIRENT): Reintroduce its
	AC_DEFUN.

1999-10-05  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>

	Shell meta characters in an argument causes the configure script
	to freak out and generate a config.status file that contains
	syntax errors.
	Bug triggered by ./configure --with-foobar=\''`"$'.

	* acgeneral.m4 (AC_INIT_PARSE_ARGS): Quote single quotes that end
	up between single quotes.  Protect arguments of echo with double
	quotes.
	(AC_INIT_PREPARE): Likewise.
	(AC_PATH_PROG): Protect argument of test.
	(AC_OUTPUT): Quote meta characters in ac_configure_args.

1999-10-05  Akim Demaille  <akim@epita.fr>

	The sed quoting script depends on the shape of the commands used
	by AC_SUBST.  The latter was changed, but not the former.
	Bug triggered with FOO='%\c' AC_SUBST(FOO).

	* acgeneral.m4 (AC_OUTPUT_FILES): Fix the sed quoting script.

1999-10-05  Akim Demaille  <akim@epita.fr>

	When you rely on the `t' flag of sed for the immediately
	preceding substitution, use a combination of `: foo; t foo'.
	Bug triggered if you AC_DEFINE(FOO, "%").
	Additionally, work around a bug in IRIX sed.
	Suggested by Ken Pizzini.

	* acgeneral.m4 (AC_OUTPUT_HEADER): Added a label and a test in the
	sed code of `$ac_cs_root.hdr'.

1999-10-05  Akim Demaille  <akim@epita.fr>

	Implement AC_PATH_TOOL.
	Submited by Gary V. Vaughan.

	* acgeneral.m4 (AC_PATH_TOOL): New macro.
	* autoconf.texi (Generic Programs): Document.

1999-10-05  Akim Demaille  <akim@epita.fr>

	Handle arbitrary version numbers.
	Reported by H.J. Lu.

	* acgeneral.m4 (m4_split): Support a second optional argument: a
 	regexp to specify where to split.
	(m4_compare): New macro, compares arbitrary long m4 lists of
 	integers.
	(AC_PREREQ_SPLIT, AC_PREREQ_CANON, AC_PREREQ_COMPARE): Removed,
	replaced by more generic macros.